# churchroad-web-demo

./: .gitmodules  Dockerfile  Makefile  churchroad.js  index.html  src_worker_js-fs_promises.churchroad.js  src_worker_js.churchroad.js  vendors-node_modules_yowasp_yosys_gen_bundle_js.churchroad.js  vendors-node_modules_yowasp_yosys_gen_resources-yosys_js.churchroad.js  web_demo.js  web_demo_bg.wasm  yowasp-yosys_npmjs_gen_resources-yosys_js.churchroad.js
.github/workflows/: build.yml  deploy.yml
churchroad-js/: package-lock.json  package.json  webpack.config.js
churchroad-js/src/: index.js  worker.js
docs/: search-index.js
docs/doc/egglog/: enum.Error.html  index.html  struct.NotFoundError.html  struct.RunReport.html
docs/doc/egglog/ast/: enum.Literal.html  struct.ResolvedVar.html  type.Command.html
docs/doc/egglog/ast/parse/: struct.ExprParser.html
docs/doc/implementors/core/clone/: trait.Clone.js
docs/doc/src/egglog/: lib.rs.html
docs/egglog/: struct.EGraph.html
docs/egglog/ast/: enum.GenericCommand.html  struct.GenericRewrite.html  struct.Id.html  struct.Symbol.html  trait.ToSexp.html  type.Subsume.html
docs/egglog/ast/parse/: struct.ActionParser.html  struct.FactParser.html  struct.ProgramParser.html  trait.__ToTriple.html
docs/egglog/sort/: trait.FromSort.html  trait.IntoSort.html
docs/implementors/core/cmp/: trait.Ord.js
docs/implementors/core/convert/: trait.From.js
docs/implementors/core/marker/: trait.Copy.js
docs/src/egglog/ast/: mod.rs.html
web-demo/: Cargo.toml
web-demo/src/: lib.rs
web-demo/static/: demo.html  index.html
(+9 files in other folders)
