[package]
edition = "2021"
name = "web-demo"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

# Wasm-opt started failing when I changed egglog version; disabling.
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies.egglog]
default-features = false
features = ["wasm-bindgen"]
#path = ".."
git = "https://github.com/egraphs-good/egglog"
rev = "325814fd90767b5e43c72bc2eb65e14ff0b8746c"

[dependencies]
wee_alloc = "0.4.5"
churchroad = {path = "../churchroad"}

log = "0.4.19"
wasm-logger = "0.2"

console_error_panic_hook = "0.1.7"
js-sys = "0.3"
wasm-bindgen = "0.2"
web-sys = {version = "0.3.64", features = [
  # "Blob",
  # "BlobPropertyBag",
  # "console",
  "MessageEvent", # "Url",
  # "Window",
  # "Location",
  # "Document",
  # "HtmlElement",
  # "Node",
  # "Text",
  "Worker",
  "DedicatedWorkerGlobalScope",
]}
